Fix gap between wave and article full

--- a/wp-content/themes/visithalland/assets/src/scss/article/_article-full.scss
+++ b/wp-content/themes/visithalland/assets/src/scss/article/_article-full.scss
@@ -24,7 +24,7 @@
 		height:100px;
 		width:100%;
 		position:absolute;
-		top:0;
+		top:-5px;
 		left:0;
 		right:0;
 		z-index: $z2;
